Integrate API with AXIOS pt.1
