# storage/api-docs/api-docs.json
@@ -147,6 +147,58 @@
                 ],
                 "summary": "Display a listing of items",
                 "operationId": "index",
+                "parameters": [
+                    {
+                        "name": "_page",
+                        "in": "query",
+                        "description": "current page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "_limit",
+                        "in": "query",
+                        "description": "max item in a page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 10
+                        }
+                    },
+                    {
+                        "name": "_search",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "_vendor",
+                        "in": "query",
+                        "description": "search by vendor",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "_sort_by",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "latest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -170,6 +222,14 @@
                         "application/json": {
                             "schema": {
                                 "$ref": "#/components/schemas/Furniture"
+                            },
+                            "example": {
+                                "name": "Lorem Ipsum",
+                                "description": "Lorem ipsum dolor sit amet",
+                                "image": "https://",
+                                "price": "100000",
+                                "category": "Table",
+                                "vendor": "Brand"
                             }
                         }
                     }
@@ -183,7 +243,13 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport_token_ready": [],
+                        "passport": []
+                    }
+                ]
             }
         },
         "/api/furniture/{id}": {
@@ -257,6 +323,14 @@
                         "application/json": {
                             "schema": {
                                 "$ref": "#/components/schemas/Furniture"
+                            },
+                            "example": {
+                                "name": "Lorem Ipsum",
+                                "description": "Lorem ipsum dolor sit amet",
+                                "image": "https://",
+                                "price": "100000",
+                                "category": "Table",
+                                "vendor": "Brand"
                             }
                         }
                     }
